--- a/app/layouts/core/account.phtml
+++ b/app/layouts/core/account.phtml
@@ -24,7 +24,7 @@
 <body style="background: #f5faff;">
 <div class="container">
     <div style="margin: 10% auto 0; width: 300px;" class="well">
-        <p><img src="http://192.168.1.51/theme/default/images/logo.jpg"></p>
+        <p style="margin-bottom: 30px"><img src="http://192.168.1.51/theme/default/images/logo.jpg"></p>
         <?php echo $this->layout()->content; ?>
     </div>
 </div>
