--- a/app/layouts/core/account.phtml
+++ b/app/layouts/core/account.phtml
@@ -21,9 +21,9 @@
     </script>
 </head>
 <base href="<?php //echo $this->baseUrl(); ?>" />
-<body style="background: #f5faff;">
+<body style="background: #5F99D3">
 <div class="container">
-    <div style="margin: 10% auto 0; width: 300px;" class="well">
+    <div class="well" style="margin: 10% auto 0; width: 300px; background-color: #F5FAFF;">
         <p style="margin-bottom: 30px"><img src="http://192.168.1.51/theme/default/images/logo.jpg"></p>
         <?php echo $this->layout()->content; ?>
     </div>
