--- a/app/modules/account/views/scripts/access/denied.phtml
+++ b/app/modules/account/views/scripts/access/denied.phtml
@@ -1,6 +1,12 @@
-<h1>Доступ запрещен</h1>
+<h1>Ошибка доступа</h1>
+<hr/>
 <p>
-    У вашего аккаунта отсутствуют разрешения на просмотр и редактирование внутренних ресурсов системы HELPME.
+    У вашего аккаунта отсутствуют разрешения на просмотр и редактирование внутренних ресурсов.
+</p>
+<p>
     За соответствующими правами обратитесь к администратору системы или администратору компании-партнера<br/>
+</p>
+<p>
     <a href="<?=$this->baseUrl();?>">Вернуться на главную</a>
 </p>
+
