--- a/app/layouts/core/default.phtml
+++ b/app/layouts/core/default.phtml
@@ -67,10 +67,10 @@
                     </tr>
                 </table>
                 <?php else: ?>
-                <table>
+                <table style="margin-top: 30px">
                     <tr>
                         <td>
-                            <a href="<?php echo $this->baseUrl('account/access/login');?>">Авторизация</a>
+                            <a href="<?php echo $this->baseUrl('account/access/login');?>" style="text-decoration: underline"><strong>Авторизоваться</strong></a>
                         </td>
                     </tr>
                 </table>
