--- a/app/modules/account/views/scripts/access/denied.phtml
+++ b/app/modules/account/views/scripts/access/denied.phtml
@@ -7,6 +7,8 @@
     За соответствующими правами обратитесь к администратору системы или администратору компании-партнера<br/>
 </p>
 <p>
+    <a href="<?=$this->baseUrl('account/access/login');?>">Авторизоваться</a>
+    <span> / </span>
     <a href="<?=$this->baseUrl();?>">Вернуться на главную</a>
 </p>
 
