--- a/app/modules/account/views/scripts/access/login.phtml
+++ b/app/modules/account/views/scripts/access/login.phtml
@@ -1,14 +1,14 @@
-<h1>Войти</h1>
-<p><em>Для работы в системе Helpme, пожалуйста, авторизуйтесь</em></p>
+<h1>Авторизация</h1>
 <hr/>
+<p><em>Для продолжения работы в системе HelpMe, пожалуйста, авторизуйтесь</em></p>
 <div style="margin-top: 20px">
     <form method="post" action="<?=$this->url()?>">
         <p>
-            <label class="required" for="account-login">Логин:</label>
+            <label class="required" for="account-login"><strong>Логин:</strong></label>
             <input type="text" value="" id="account-login" name="account[login]" style="width: 90%">
         </p>
         <p>
-            <label class="required" for="account-password">Пароль:</label>
+            <label class="required" for="account-password"><strong>Пароль:</strong></label>
             <input type="password" value="" id="account-password" name="account[password]" style="width: 90%">
         </p>
         <p>
