--- a/app/layouts/core/default.phtml
+++ b/app/layouts/core/default.phtml
@@ -11,6 +11,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <?php echo $this->headMeta();?>
+    <link rel="shortcut icon" href="<?=$this->baseUrl('favicon.ico?' . date('U'))?>" />
     <?php echo $this->headTitle(); ?>
     <?php print $this->headLink();?>
     <script type="text/javascript">
