--- a/app/modules/account/views/scripts/access/denied.phtml
+++ b/app/modules/account/views/scripts/access/denied.phtml
@@ -1,7 +1,7 @@
 <h1>Ошибка доступа</h1>
 <hr/>
 <p>
-    У вашего аккаунта отсутствуют разрешения на просмотр и редактирование внутренних ресурсов.
+    У вашего аккаунта отсутствуют права на просмотр или редактирование запрошенного ресурса.
 </p>
 <p>
     За соответствующими правами обратитесь к администратору системы или администратору компании-партнера<br/>
